# translatorle

./: .gitignore  CLAUDE.md  LICENSE  README.md  _check_npu.py  _test_npu_direct.py  benchmark.py  build_ov.bat  intel-npu-gdn.md  pyproject.toml  test_asr_stability.py
app/: CLAUDE.md  __main__.py  asr_worker.py  audio_capture.py  main_window.py  mt_worker.py
asr/: CLAUDE.md  __init__.py  config.py  engine.py  ov_decoder.py  ov_encoder.py  processor.py
asr/scripts/: bench_asr_models.py  bench_decoder.py  prepare_asr_models.py  quantize_decoder.py  test_asr_wav.py
hymt/: CLAUDE.md  __init__.py  config.py  engine.py
hymt/scripts/: bench_dynquant.py  bench_mt.py  bench_mt_compare.py  bench_session.py  diag_npu.py  diag_npu2.py  prepare_mt_models.py  requantize_mt.py  test_mt.py
qwen3/: BENCHMARK.md
qwen3/scripts/: benchmark.py  prepare_qwen3_models.py
qwen35/: CLAUDE.md  __init__.py  benchmark.md  chunkwise-parallel-gdn.md  chunkwise_gdn.py  config.py  export.py  export_hybrid.py  export_mtp.py  export_npu_v2.py  export_vl.py  fuse_gdn_ir.py  gdn.md  inference.py  inference_hybrid.py  inference_npu_v2.py  ov_ops.py  ov_vision_encoder.py  paro_rotation.py  pyproject.toml  s1_gdn.py  stateful.py
qwen35/cpp/: CMakeLists.txt  build.ps1  clear-cache.ps1  run-python.ps1  run.ps1
qwen35/cpp/config/: fused_gdn_recurrence.xml
qwen35/cpp/scripts/: convert_tokenizer.py
qwen35/cpp/src/: gdn_fuse_pass.cpp  gdn_fuse_pass.h  gdn_recurrence.cl  half.h  hybrid_forward.cpp  hybrid_model.cpp  hybrid_model.h  hybrid_mtp.cpp  main.cpp  npy_reader.cpp  npy_reader.h  tokenizer.cpp  tokenizer.h  utils.h
qwen35/cpp_gpu/: CMakeLists.txt  build.ps1  package.ps1  run.ps1
qwen35/cpp_gpu/src/: gpu_model.cpp  gpu_model.h  main.cpp  npy_reader.cpp  npy_reader.h  utils.h
qwen35/docs/: hybrid-gpu-npu-plan.md  openvino-npu-issues.md  paro-quant.md
qwen35/docs/archived/: attn-export-issue.md  mtp.md  new-optimization.md  perf-analysis.md
qwen35/scripts/: _bench_gpu_cpu.py  _check_embed.py  _check_mask.py  _check_mask2.py  _check_mask3.py  _check_mask4.py  _check_npu.py  _check_npuw_io.py  _check_pos_ids.py  _check_rotary_shape.py  _debug_hybrid_compare.py  _debug_hybrid_cpu.py  _debug_hybrid_cpu2.py  _debug_hybrid_io.py  _debug_hybrid_vs_direct.py  _debug_intermediates.py  _debug_multistep.py  _debug_nan.py  _debug_npu_cpu.py  _debug_npu_logits.py  _debug_scatter_npu.py  _debug_single_token.py  _debug_static_cache.py  _diag_npu_compile.py  _diag_npu_compile2.py  _diag_npu_ir.py  _diag_npu_manual_reshape.py  _diag_npu_no_npuw_llm.py  _diag_npu_shapes.py  _diag_npuw_llm_debug.py  _diag_stateful_to_stateless.py  _export_nonstateful.py  _inspect_npu_ir.py  _inspect_npu_model.py  _inspect_npu_v2.py  _inspect_npuw_model.py  _quick_debug.py  _quick_debug2.py  _test_gpu.py  _test_gpu_final.py  (+39 more)
scripts/: prepare_asr_models.py  test_asr_wav.py
tts/: CLAUDE.md  __init__.py  config.py  engine.py  optimization.md  ov_code_predictor.py  ov_decoder.py  ov_talker.py  text_conditioner.py
tts/scripts/: _check_pinv.py  _export_code_predictor.py  _export_decoder.py  _export_talker.py  _ir_surgery.py  benchmark_tts.py  prepare_tts_models.py
tts/scripts/qwen_tts/: __init__.py
