[project]
name = "translatorle"
version = "0.1.0"
description = "Offline translator with ASR + LLM + TTS"
requires-python = ">=3.12"
dependencies = [
    # Core inference
    "openvino>=2026.0.0",
    "numpy",
    "transformers>=4.49,<5",
    # Audio processing
    "librosa",
    # Model export (only needed for prepare_asr_models.py)
    "torch",
    "torchaudio",
    "optimum[openvino]",
    "nncf>=3.0",
    # MT module: openvino_genai for LLMPipeline
    "openvino-genai>=2026.0.0.0",
    "openvino-tokenizers>=2026.0.0.0",
    "huggingface-hub",
    # GUI
    "PySide6>=6.7",
    "sounddevice",
    "python-dateutil>=2.9.0.post0",
    "protobuf>=5.29,<6",
]

[tool.uv]
environments = ["sys_platform == 'win32'"]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-xpu" }]
torchaudio = [{ index = "pytorch-xpu" }]
